# toalivecomment

./: .gitignore  README.md  main.py  master-prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt
assets/fonts/: README.md
assets/sounds/: README.md
config/: selectors.default.json  settings.default.json
packaging/: fbcollector.spec  installer.iss
samples/: EmployeeIDs.csv  RawComments.csv  UniqueUsers.csv  WinnerHistory.csv
scripts/: build_exe.py  generate_assets.py
src/fbcollector/: __init__.py  app.py  constants.py
src/fbcollector/core/: events.py  queues.py  session.py  thread_manager.py
src/fbcollector/services/: settings_service.py
src/fbcollector/services/export/: csv_writer.py  export_service.py
src/fbcollector/services/facebook/: browser_connector.py  chrome_manager.py  collector.py  comment_extractor.py  selectors.py
src/fbcollector/services/storage/: db.py  models.py  repositories.py  writer_thread.py
src/fbcollector/services/wheel/: confetti.py  wheel_engine.py  wheel_state.py
src/fbcollector/ui/: fonts.py  main_window.py  theme.py  wheel_window.py
src/fbcollector/ui/components/: connect_flow.py  dashboard_cards.py  live_feed.py  log_panel.py  search_bar.py  toolbar.py  (+2 more)
src/fbcollector/utils/: hashing.py  id_extractor.py  logger.py  paths.py  perf.py
tests/: conftest.py  test_comment_extractor.py  test_csv_writer.py  test_dedupe_repositories.py  test_hashing.py  test_id_extractor.py  test_queue_bus.py  test_selectors_config.py  test_settings_service.py  test_wheel_engine.py
tests/fixtures/: facebook_comments.html
